--- a/details.html
+++ b/details.html
@@ -4,112 +4,190 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Review Your Details - Pradeep Paudel Portfolio</title>
-  <link href="https://cdn.tailwindcss.com" rel="stylesheet" />
+  <title>Pradeep Paudel Portfolio - Contact</title>
+  <link rel="stylesheet" href="styles.css" />
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-gray-50 font-sans">
+<body class="font-sans bg-gray-50">
 
-  <main class="container mx-auto max-w-3xl p-6 mt-10 bg-white rounded shadow-md">
+  <marquee behavior="scroll" direction="left">
+    Welcome to Pradeep Paudel's Portfolio | Web Developer & Graphic Designer
+  </marquee>
 
-    <h1 class="text-2xl font-bold text-indigo-700 mb-6 text-center">Review Your Details</h1>
+  <header class="bg-white shadow-md">
+    <div class="container mx-auto px-4 py-4 flex justify-between items-center">
+      <h1 class="text-xl font-bold">PRADEEP PAUDEL</h1>
+      <div class="hidden md:flex gap-6">
+        <a href="index.html" class="hover:text-indigo-600 transition">Home</a>
+        <a href="about.html" class="hover:text-indigo-600 transition">About</a>
+        <a href="projects.html" class="hover:text-indigo-600 transition">Projects</a>
+        <a href="whyme.html" class="hover:text-indigo-600 transition">Why Me</a>
+        <a href="contact.html" class="hover:text-indigo-600 transition font-semibold underline">Contact</a>
+      </div>
+      <div class="md:hidden">
+        <button id="menu-toggle" aria-label="Toggle menu">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <div id="mobile-menu" class="md:hidden hidden bg-white px-4 pb-4">
+      <a href="index.html" class="block py-2 hover:text-indigo-600 transition">Home</a>
+      <a href="about.html" class="block py-2 hover:text-indigo-600 transition">About</a>
+      <a href="projects.html" class="block py-2 hover:text-indigo-600 transition">Projects</a>
+      <a href="whyme.html" class="block py-2 hover:text-indigo-600 transition">Why Me</a>
+      <a href="contact.html" class="block py-2 hover:text-indigo-600 transition font-semibold underline">Contact</a>
+    </div>
+  </header>
 
-    <form id="final-submit-form" method="POST" action="https://formspree.io/f/xrblyyap" class="space-y-6">
+  <main class="container mx-auto max-w-3xl flex-grow p-8 bg-white rounded-lg shadow-md mt-10">
 
-      <!-- Display form data as read-only inputs -->
+    <h2 class="text-center text-3xl font-extrabold text-indigo-700 mb-8">Please Confirm and Edit Your Details</h2>
 
-      <div>
-        <label class="block font-semibold mb-1 text-gray-700">First Name</label>
-        <input type="text" name="firstName" id="firstName" readonly
-          class="w-full border border-gray-300 rounded px-4 py-2 bg-gray-100 cursor-not-allowed" />
+    <form id="confirm-form" method="POST" action="https://formspree.io/f/xrblyyap" class="space-y-6">
+
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+        <div>
+          <label for="firstName" class="block font-semibold text-gray-700 mb-1">First Name</label>
+          <input type="text" id="firstName" name="firstName" required
+            class="w-full px-4 py-2 rounded border border-gray-300 focus:ring-indigo-500 focus:border-indigo-500" />
+        </div>
+
+        <div>
+          <label for="surname" class="block font-semibold text-gray-700 mb-1">Surname</label>
+          <input type="text" id="surname" name="surname" required
+            class="w-full px-4 py-2 rounded border border-gray-300 focus:ring-indigo-500 focus:border-indigo-500" />
+        </div>
       </div>
 
       <div>
-        <label class="block font-semibold mb-1 text-gray-700">Surname</label>
-        <input type="text" name="surname" id="surname" readonly
-          class="w-full border border-gray-300 rounded px-4 py-2 bg-gray-100 cursor-not-allowed" />
+        <label class="block font-semibold text-gray-700 mb-1">Gender</label>
+        <div class="flex gap-6">
+          <label class="inline-flex items-center">
+            <input type="radio" name="gender" value="Male" required class="form-radio text-indigo-600" />
+            <span class="ml-2">Male</span>
+          </label>
+          <label class="inline-flex items-center">
+            <input type="radio" name="gender" value="Female" required class="form-radio text-indigo-600" />
+            <span class="ml-2">Female</span>
+          </label>
+          <label class="inline-flex items-center">
+            <input type="radio" name="gender" value="Other" required class="form-radio text-indigo-600" />
+            <span class="ml-2">Other</span>
+          </label>
+        </div>
       </div>
 
       <div>
-        <label class="block font-semibold mb-1 text-gray-700">Gender</label>
-        <input type="text" name="gender" id="gender" readonly
-          class="w-full border border-gray-300 rounded px-4 py-2 bg-gray-100 cursor-not-allowed" />
+        <label for="country" class="block font-semibold text-gray-700 mb-1">Country</label>
+        <select id="country" name="country" required
+          class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400">
+          <option value="">-- Select your country --</option>
+          <option value="Nepal">Nepal</option>
+          <option value="India">India</option>
+          <option value="USA">USA</option>
+          <option value="Other">Other</option>
+        </select>
       </div>
 
       <div>
-        <label class="block font-semibold mb-1 text-gray-700">Country</label>
-        <input type="text" name="country" id="country" readonly
-          class="w-full border border-gray-300 rounded px-4 py-2 bg-gray-100 cursor-not-allowed" />
+        <label for="mobile" class="block font-semibold text-gray-700 mb-1">Mobile Number</label>
+        <input id="mobile" name="mobile" type="tel" pattern="[0-9]{10}" placeholder="e.g. 9800000000" required
+          class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400" />
       </div>
 
       <div>
-        <label class="block font-semibold mb-1 text-gray-700">Mobile Number</label>
-        <input type="text" name="mobile" id="mobile" readonly
-          class="w-full border border-gray-300 rounded px-4 py-2 bg-gray-100 cursor-not-allowed" />
+        <label for="email" class="block font-semibold text-gray-700 mb-1">Email Address</label>
+        <input id="email" name="email" type="email" required
+          class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400" />
       </div>
 
       <div>
-        <label class="block font-semibold mb-1 text-gray-700">Email Address</label>
-        <input type="email" name="email" id="email" readonly
-          class="w-full border border-gray-300 rounded px-4 py-2 bg-gray-100 cursor-not-allowed" />
+        <label for="address" class="block font-semibold text-gray-700 mb-1">Address</label>
+        <input id="address" name="address" type="text" required
+          class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400" />
       </div>
 
       <div>
-        <label class="block font-semibold mb-1 text-gray-700">Address</label>
-        <input type="text" name="address" id="address" readonly
-          class="w-full border border-gray-300 rounded px-4 py-2 bg-gray-100 cursor-not-allowed" />
+        <label for="message" class="block font-semibold mb-1 text-gray-700">Your Message</label>
+        <textarea id="message" name="message" rows="5" required
+          class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400"></textarea>
       </div>
 
-      <div>
-        <label class="block font-semibold mb-1 text-gray-700">Message</label>
-        <textarea name="message" id="message" rows="5" readonly
-          class="w-full border border-gray-300 rounded px-4 py-2 bg-gray-100 cursor-not-allowed"></textarea>
-      </div>
+      <!-- Hidden checkboxes to mimic subscribe etc. if needed -->
+      <input type="hidden" name="subscribe" value="on" />
+      <input type="hidden" name="updates" value="on" />
+      <input type="hidden" name="terms" value="on" />
+      <input type="hidden" name="privacy" value="on" />
 
-      <!-- Checkboxes as hidden inputs with values (since user can't edit) -->
-      <input type="hidden" name="subscribe" id="subscribe" value="on" />
-      <input type="hidden" name="updates" id="updates" value="on" />
-      <input type="hidden" name="terms" id="terms" value="on" />
-      <input type="hidden" name="privacy" id="privacy" value="on" />
-
-      <div class="flex justify-between">
-        <button type="button" id="edit-btn"
-          class="bg-gray-400 hover:bg-gray-500 text-white px-4 py-2 rounded shadow">Edit</button>
-
+      <div class="flex justify-center mt-8">
         <button type="submit"
-          class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-2 rounded shadow">Final Submit</button>
+          class="text-white bg-indigo-600 hover:bg-indigo-700 px-8 py-3 rounded shadow font-semibold transition">
+          Final Submit
+        </button>
       </div>
 
     </form>
 
   </main>
 
+   <footer class="bg-gradient-to-r from-indigo-100 via-purple-100 to-pink-100 py-8">
+  <div class="max-w-4xl mx-auto flex flex-col items-center space-y-4 px-4 text-center">
+    
+    <img src="image/4.jpg" alt="Pradeep Logo" class="w-16 h-16 rounded-full shadow-lg border border-gray-300" />
+
+    <h2 class="text-xl font-semibold text-gray-800">Pradeep Paudel</h2>
+
+    <div class="flex space-x-6 mt-2">
+
+      <a href="https://www.facebook.com/pradeep07pdl" target="_blank" class="text-blue-600 hover:text-blue-800 transition">
+        <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 5 3.657 9.127 8.438 9.878v-6.988H7.898v-2.89h2.54V9.797c0-2.506 1.493-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.242 0-1.63.771-1.63 1.562v1.875h2.773l-.443 2.89h-2.33v6.988C18.343 21.127 22 17 22 12z"/>
+        </svg>
+      </a>
+
+      <a href="https://wa.me/9779765671782" target="_blank" class="text-green-500 hover:text-green-600 transition">
+        <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 32 32">
+          <path d="M16 2C8.27 2 2 8.27 2 16a13.91 13.91 0 002.05 7.24L2 30l6.9-1.94A13.92 13.92 0 0016 30c7.73 0 14-6.27 14-14S23.73 2 16 2zm7.9 19.1l-2.1.65a1.4 1.4 0 01-1.6-.6l-.8-1.2a10.2 10.2 0 01-4.8-4.8l-1.2-.8a1.4 1.4 0 01-.6-1.6l.65-2.1a.6.6 0 01.65-.45h1.3a.6.6 0 01.6.45l.65 1.9a.6.6 0 01-.15.6L14 13.2a9.4 9.4 0 004.8 4.8l1.25-.75a.6.6 0 01.6-.15l1.9.65a.6.6 0 01.45.6v1.3a.6.6 0 01-.45.65z"/>
+        </svg>
+      </a>
+
+      <a href="https://www.linkedin.com/in/pradip-paudel-5512a0372/" target="_blank" class="text-blue-500 hover:text-blue-700 transition">
+        <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM0 8h5v16H0V8zm7.5 0h4.8v2.2h.07c.67-1.26 2.3-2.6 4.73-2.6 5.06 0 6 3.33 6 7.66V24h-5v-6.4c0-1.53-.03-3.5-2.13-3.5s-2.46 1.67-2.46 3.4V24h-5V8z"/>
+        </svg>
+      </a>
+    </div>
+
+    <p class="text-sm text-gray-500 mt-4">&copy; 2025 Pradeep Paudel. All rights reserved.</p>
+  </div>
+</footer>
+
   <script>
-    // On load, populate inputs from localStorage
+    // Prefill form with saved data from localStorage
     window.addEventListener('DOMContentLoaded', () => {
       const data = JSON.parse(localStorage.getItem('contactFormData') || '{}');
-      if (!data) return;
+      if (!data || Object.keys(data).length === 0) {
+        alert('No saved data found. Redirecting to contact form.');
+        window.location.href = 'contact.html';
+        return;
+      }
 
-      document.getElementById('firstName').value = data.firstName || '';
-      document.getElementById('surname').value = data.surname || '';
-      document.getElementById('gender').value = data.gender || '';
-      document.getElementById('country').value = data.country || '';
-      document.getElementById('mobile').value = data.mobile || '';
-      document.getElementById('email').value = data.email || '';
-      document.getElementById('address').value = data.address || '';
-      document.getElementById('message').value = data.message || '';
+      // Fill text inputs
+      ['firstName', 'surname', 'country', 'mobile', 'email', 'address', 'message'].forEach(id => {
+        const el = document.getElementById(id);
+        if (el && data[id]) el.value = data[id];
+      });
 
-      // For checkboxes, set hidden inputs accordingly (you can adjust if needed)
-      // Here assuming all required are checked on contact page
-      document.getElementById('subscribe').value = data.subscribe === 'on' ? 'on' : '';
-      document.getElementById('updates').value = data.updates === 'on' ? 'on' : '';
-      document.getElementById('terms').value = data.terms === 'on' ? 'on' : '';
-      document.getElementById('privacy').value = data.privacy === 'on' ? 'on' : '';
-    });
-
-    // Edit button takes user back to contact page to edit info
-    document.getElementById('edit-btn').addEventListener('click', () => {
-      window.location.href = 'contact.html';
+      // Fill radio buttons (gender)
+      if (data.gender) {
+        const genderRadio = document.querySelector(`input[name="gender"][value="${data.gender}"]`);
+        if (genderRadio) genderRadio.checked = true;
+      }
     });
   </script>
 
