--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   <title>Pradeep Paudel Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.tailwindcss.com"></script>
+   <link rel="icon" type="image/png" href="image/favicon.png">
 </head>
 <body class="font-sans">
 
