--- a/details.html
+++ b/details.html
@@ -7,6 +7,7 @@
   <title>Pradeep Paudel Portfolio - Contact</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.tailwindcss.com"></script>
+   <link rel="icon" type="image/png" href="image/favicon.png">
 </head>
 
 <body class="font-sans bg-gray-50">
