--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+   <link rel="icon" type="image/png" href="image/favicon.png">
 
 </head>
 <body class="font-sans">
