--- a/contact.html
+++ b/contact.html
@@ -119,11 +119,11 @@
 
       <div class="space-y-2 text-gray-700">
         <label class="inline-flex items-center">
-          <input type="checkbox" name="subscribe" required class="form-checkbox text-indigo-600" />
+          <input type="checkbox" name="subscribe" class="form-checkbox text-indigo-600" />
           <span class="ml-2">Subscribe to newsletter</span>
         </label>
         <label class="inline-flex items-center">
-          <input type="checkbox" name="updates" required class="form-checkbox text-indigo-600" />
+          <input type="checkbox" name="updates" class="form-checkbox text-indigo-600" />
           <span class="ml-2">Send me updates about new projects</span>
         </label>
         <label class="inline-flex items-center">
