--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pradeep Paudel Portfolio</title>
+  <title>Pradip Paudel Web Designer</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
@@ -42,9 +42,6 @@
     </div>
   </header>
   <body class="font-sans">
-      <div class="real">
-           <p id="datetime"></p>
-    </div>
 
   <section id="home" class="text-center py-16">
    <a href="image/4.jpg" target="_self" rel="noopener noreferrer">
