--- a/details.html
+++ b/details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pradeep Paudel Portfolio - Contact</title>
+  <title>Pradip Paudel Web Designer</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.tailwindcss.com"></script>
    <link rel="icon" type="image/png" href="image/favicon.png">
